kubernetes/ingress/ingress-nginx-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /   #new 
  name: example-app
  namespace: test-ns-108
spec:
  tls:
  - hosts:
    - node1.dev1.cluster.mondas.dev
    secretName: marcel-tls-secret
  rules:
  - host: node1.dev1.cluster.mondas.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example-service
            port: 
              number: 80
